# cerida

./: .gitignore  ARCHITECTURE.md  Readme.md  docker-compose.yml  package.json
.claude/: settings.json
.claude/commands/: capture.md
.github/workflows/: ci.yml
app/: .gitignore  AGENTS.md  DESIGN.md  README.md  eslint.config.js  package.json  react-router.config.ts  tsconfig.json  tsconfig.node.json
app/app/: app.css  entry.server.tsx  root.tsx  routes.ts
app/app/components/: alert-banner.tsx  app-providers.tsx  navbar.tsx  onboarding-modal.tsx  settings-modal.tsx  sidebar.tsx
app/app/components/grid/: analytics-panel.tsx  analytics.ts  band-panel.tsx  grid-chart.tsx  grid-worker.ts  order-summary.tsx  payoff-panel.tsx  payoff.ts  right-panel.tsx  strike-landscape.tsx  types.ts  use-grid-state.ts
app/app/components/market/: active-market-context.tsx  bottom-tabs.tsx  chart-placeholder.tsx  combo-context.tsx  combo-tray.tsx  crypto-price.tsx  execution-ticket.tsx  gex-profile.tsx  iv-term-structure.tsx  levels-context.tsx  live-binary.tsx  market-header.tsx  options-flow.tsx  order-book.tsx  price-chart.tsx  top-nav.tsx  trading-panel.tsx
app/app/components/markets/: market-card.tsx
app/app/components/toast/: toast-card.tsx  toast-container.tsx  toast-context.tsx
app/app/components/trading/: binary-trading.tsx  expiry-ladder.tsx  ladder-trading.tsx  pnl-surface.tsx  predict-trading.tsx  range-trading.tsx  range-widget.tsx
app/app/data/: markets.ts
app/app/lib/: cerida-api.ts  contracts.ts  exposure.ts  predict-api.ts  svi.ts  use-positions.ts
app/app/routes/: layout.tsx
app/app/routes/grid/: route.tsx
app/app/routes/home/: route.tsx
app/app/routes/markets.$slug/: route.tsx
app/app/routes/portfolio/: route.tsx
app/app/routes/settings/: route.tsx
contracts/: move.toml
contracts/sources/: cerida.move  combo.move  constants.move  i64.move  intent.move  leverage.move  manager.move  math.move  position_token.move  vault.move  windows.move
contracts/tests/: cerida_tests.move  leverage_tests.move  manager_tests.move  vault_tests.move  windows_tests.move
crates/: .env.example  Cargo.toml  Dockerfile
crates/cerida-api/: Cargo.toml
crates/cerida-api/src/: main.rs
crates/cerida-core/: Cargo.toml
crates/cerida-core/src/: combo.rs  config.rs  db.rs  jobs.rs  keeper_tx.rs  lib.rs  predict.rs  pricing.rs  sui.rs  sui_tx.rs
crates/cerida-indexer/: Cargo.toml
crates/cerida-indexer/src/: main.rs
crates/cerida-keeper/: Cargo.toml
crates/cerida-keeper/src/: main.rs
docker/: README.md  docker-compose.gcp.yml  docker-compose.yml  gcp.env.example
docker/deployments/: .sui-keystore  local.json  testnet.json
docker/scripts/: package.json  tsconfig.json
docker/scripts/src/: combo-api.ts  combo-flow.ts  combo-keeper.ts  combo-ptb.ts  combo-store.ts  combo-types.ts  config.ts  deploy.ts  flow.ts  limit-order-flow.ts  mint-to.ts  range-grid-flow.ts  settlement-flow.ts  setup.ts
docker/scripts/src/testnet/: config.ts  deploy.ts  flow.ts  leverage-10x.ts  windows-open.ts  windows-settle.ts
docs/: leverage.md
indexers/price/: .env.example  Dockerfile  README.md  package.json  tsconfig.json
indexers/price/src/: db.ts  index.ts  indexer.ts  server.ts  source.ts  svi.ts
mobile/: package.json  vite.config.ts
mobile/src/: App.tsx  index.css
mobile/src/hooks/: use-options-state.ts
paper/: leverage-model.md  orderbook-model.md
queues/: readme.md
server/: package.json
simulations/: leverage_mc.ts  orderbook_mc.ts
workers/: package.json
