[package]
name = "cerida-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
bcs.workspace = true
bech32.workspace = true
blake2.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
redis.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
